tests/paczka1/fuzzy1/63468205.err
Error in line 4: dXHNNLIa9 A11 8,2
Error in line 31: nsvX1zVsdLo S770 75,48
Error in line 23: nsvX1zVsdLo S770 49,9
Error in line 21: BcsIhyp S770 20,5
Error in line 26: dXHNNLIa9 A339 36,6
